--- a/templates/crowdfunding/update_crowdfund.html
+++ b/templates/crowdfunding/update_crowdfund.html
@@ -5,6 +5,6 @@
         {{ form|as_bootstrap }}
     </form>
 </div>
-<div class="boxcontent-submitbtn newbtn" id="submitbtn">
+<div class="boxcontent-submitbtn newbtn" id="submitbtn" style="border-radius: 0">
     <p>{% trans "Submit" %}</p>
 </div>
