--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
             <div class="box box-solid" style="min-height: 300px">
                 <div class="box-body">
                     <div class="widget-box" style="text-align: center; margin-top: 25%">
@@ -48,21 +48,49 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
             <div class="box box-solid" style="min-height: 300px">
                 <div class="box-body">
-                    <div class="widget-box">
-                        <h3>{% trans "Introduction" %}</h3>
-                        <p style="font-weight: 300; line-height: 18px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
-                    {% if crowdfund.active %}
-                    <div class="widget-box">
-                        <h4 class="widget-box-title">{% trans "Stats" %}</h4>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ percent_raised }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ percent_raised }}%"></div>
-                            <p>${{ crowdfund.raised|intcomma }}/${{ crowdfund.goal|intcomma }}</p>
+                    {% if crowdfund %}
+                        <div class="widget-box">
+                            <h4 class="widget-box-title">{% trans "Introduction" %}</h4>
+                            <div class="widget-box-text">
+                                {% if crowdfund.introduction %}
+                                    <p>
+                                        {{ crowdfund.introduction }}
+                                    </p>
+                                {% else %}
+                                    <p>
+                                        {% trans "No introduction added" %}
+                                    </p>
+                                {% endif %}
+                            </div>
                         </div>
-                    </div>
+                        <div class="widget-box">
+                            <h4 class="widget-box-title">{% trans "Stats" %}</h4>
+                            <hr class="widget-box-separator">
+                            <div class="crowdfund-stat-info">
+                                <div class="progress-wrapper">
+                                    <p class="crowdfund-stat">{% trans "Goal   " %} <span>${{ crowdfund.goal|intcomma }}</span> <span style="margin: 0 10px">|</span> {% trans "Pledged   " %} <span>{% if crowdfund.raised %}${{ crowdfund.raised|intcomma }}{% else %}$0{% endif %}</span></p>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ percent_raised }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ percent_raised }}%"></div>
+                                        <p>{% if crowdfund.raised %}${{ crowdfund.raised|intcomma }}{% else %}$0{% endif %}/${{ crowdfund.goal|intcomma }}</p>
+                                    </div>
+                                </div>
+                                <div class="countdown-wrapper">
+                                    <p class="crowdfund-stat" style="margin: 0">{% trans "Remaining Time" %}</p>
+                                    <div class="countdown" id="endcountdown">
+                                        <h1 id="day"></h1>
+                                        <h1 id="hour"></h1>
+                                        <h1 id="minute"></h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="widget-box" style="text-align: center">
+                            <h4>{% trans "No Crowdfund started" %}</h4>
+                        </div>
                     {% endif %}
                 </div>
             </div>
@@ -121,8 +149,15 @@
 {% endblock %}
 {% block extrascripts %}
     <script src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
     {% compress js %}
     <script type="text/javascript">
+        var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD HH:mm");
+        $("#endcountdown").countdown(countdown_time, function(event) {
+            $("#day").html(event.strftime('%D') + '<span>D</span>');
+            $("#hour").html(event.strftime('%H') + '<span>H</span>');
+            $("#minute").html(event.strftime('%M') + '<span>M</span>');
+        });
         $("#payment-errors").hide();
         var stripe = Stripe('{{ STRIPE_PUBLISHABLE_KEY }}');
         var elements = stripe.elements();
