--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -8,6 +8,10 @@
         label {
             display: block;
         }
+        #headerVideoModal .modal-content {
+            background: transparent;
+            box-shadow: none;
+        }
     </style>
 {% endblock %}
 {% block content_header_new %}
@@ -28,8 +32,8 @@
             <div class="box box-solid" style="min-height: 300px;background:linear-gradient(rgba(74, 144, 226, 0.85), rgba(74, 144, 226, 0.85)),url({% static "dist/img/photo1.png" %})">
                 <div class="box-body">
                     <div class="widget-box" style="text-align: center; margin-top: 8%">
-                        <i class="fa fa-play-circle" style="font-size: 80px; color: #FFFFFF"></i>
-                        <p style="color: #fff; font-weight: 600; font-size: 18px">{% trans "Watch video" %}</p>
+                        <i class="fa fa-play-circle" style="font-size: 80px; color: #FFFFFF; cursor: pointer" data-toggle="modal" data-target="#headerVideoModal"></i>
+                        <p style="color: #fff; font-weight: 600; font-size: 18px; cursor: pointer" data-toggle="modal" data-target="#headerVideoModal">{% trans "Watch video" %}</p>
                         {% if crowdfund.active and not end_date_passed %}
                         <button class="fund-btn" data-toggle="modal" data-target="#paymentFormModal">{% trans "FUND" %}</button>
                         {% endif %}
@@ -164,18 +168,45 @@
       </div>
     </div>
     {% endif %}
+    <div class="modal fade" id="headerVideoModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+              {% if header_video %}
+                <video src="{{ header_video.video.url }}" controls id="headerVideo">
+
+                </video>
+              {% else %}
+                <p>{% trans "Sorry, No video uploaded" %}</p>
+              {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
 {% block extrascripts %}
     <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
     {% compress js %}
     <script type="text/javascript">
+        {% if crowdfund.end_date %}
         var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD HH:mm");
         $("#endcountdown").countdown(countdown_time, function(event) {
             $("#day").html(event.strftime('%D') + '<span>D</span>');
             $("#hour").html(event.strftime('%H') + '<span>H</span>');
             $("#minute").html(event.strftime('%M') + '<span>M</span>');
         });
+        {% endif %}
+        {% if header_video %}
+        var headerVideo = document.getElementById('headerVideo');
+        headerVideo.width = 700;
+        $("#headerVideoModal").on('shown.bs.modal', function () {
+            headerVideo.play();
+        });
+        $("#headerVideoModal").on('hide.bs.modal', function () {
+            headerVideo.pause();
+        });
+        {% endif %}
         $("#payment-errors").hide();
         var stripe = Stripe('{{ STRIPE_PUBLISHABLE_KEY }}');
         var elements = stripe.elements();
