--- a/templates/crowdfunding/admin.html
+++ b/templates/crowdfunding/admin.html
@@ -27,6 +27,10 @@
             .fixed-table-pagination .pagination-detail, .fixed-table-pagination div.pagination {
                 color: #9B9B9B;
             }
+            .ui-sortable-placeholder {
+                width: 100%;
+                height: 300px;
+            }
         </style>
     {% endcompress %}
 {% endblock %}
@@ -50,6 +54,7 @@
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#paymentAmountModal">{% trans "Add payment amount" %}</button>
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#updateCrowdfundModal">{% trans "Update Crowdfund" %}</button>
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#headerVideoModal">{% trans "Upload Header Video" %}</button>
+                    <button class="btn btn-rounded" data-toggle="modal" data-target="#cardCreatorModal">{% trans "Add New Card" %}</button>
                 {% else %}
                     <button class="btn btn-rounded" id="startnew">{% trans "Start a crowdfund" %}</button>
                 {% endif %}
@@ -168,6 +173,19 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="text-center">
+                <h4>{% trans "Cards" %}</h4>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" id="cardsWrapper">
+            {{ crowdfund.admin_cards_html|safe }}
+        </div>
+    </div>
 <div class="modal fade" id="paymentDetails" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -242,10 +260,75 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="cardCreatorModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+          <div class="crowdfund-card-creator">
+              <div class="crowdfund-card-preview">
+                  <div class="text-center">
+                      <p style="margin-top: 15px;font-size: 18px;color: #ffffff;font-weight: bold;">{% trans "Make Your Card" %}</p>
+                  </div>
+                  <div class="preview">
+                      <div class="crowdfund-card">
+                          <div class="card-row active-area">
+                              <div class="card-col">
+
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="crowdfund-card-tools">
+                  <div class="text-center">
+                      <p><i class="fa fa-columns" style="margin-right: 10px"></i> {% trans "Card Height" %} <span id="cardHeight" contenteditable="true" style="background-color: #F6F6F6;padding: 5px 25px;color: #9B9B9B">300</span> <span style="font-size: 14px;color: #9B9B9B">px</span></p>
+                  </div>
+                  <div class="tools-row tool-sliders">
+                      <p style="margin-left: 30px;"><i class="fa fa-arrows-alt"></i> {% trans "Row" %}</p>
+                      <p>
+                          <input class="mdl-slider mdl-js-slider zoom-slider" type="range" min="1" max="3" value="1" tabindex="0" id="rowSlider">
+                      </p>
+                  </div>
+                  <div class="tools-columns tool-sliders">
+                      <p style="margin-left: 30px;"><i class="fa fa-refresh"></i> {% trans "Columns" %}</p>
+                      <p>
+                          <input class="mdl-slider mdl-js-slider rotate-slider" type="range" min="1" max="4" value="1" tabindex="0" id="colSlider">
+                      </p>
+                  </div>
+                  <div class="tools-padding tool-sliders">
+                      <p style="margin-left: 30px;"><i class="fa fa-certificate"></i> {% trans "Padding" %}</p>
+                      <p>
+                          <input class="mdl-slider mdl-js-slider brightness-slider" type="range" min="1" max="15" value="15" tabindex="0" id="paddingSlider">
+                      </p>
+                  </div>
+                  <div class="tools-btn" style="width: 90%;margin: 30px;">
+                      <button type="button" class="btn btn-success btn-flat btn-block" style="padding: 10px;" id="doneBtn">
+                        {% trans "Done" %}
+                      </button>
+                  </div>
+                  {% comment %}
+                  <div class="tools-margin tool-sliders">
+                      <p style="margin-left: 30px;"><i class="fa fa-connectdevelop"></i> {% trans "Margin" %}</p>
+                      <p>
+                          <input class="mdl-slider mdl-js-slider hue-slider" type="range" min="1" max="5" value="5" tabindex="0" id="marginSlider">
+                      </p>
+                  </div>
+                  {% endcomment %}
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+<input type="file" style="visibility: hidden" id="imageLoader">
+<div id="finalEdit" style="display: none">
+
+</div>
 {% endblock %}
 {% block extrascripts %}
     <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
     {% compress js %}
+        <script type="text/javascript" src="{% static "dist/js/cardcreator.js" %}"></script>
         <script type="text/javascript">
             {% if crowdfund.end_date %}
             var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD HH:mm");
