--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -12,6 +12,9 @@
             background: transparent;
             box-shadow: none;
         }
+        .popovercontent {
+            display: none;
+        }
     </style>
 {% endblock %}
 {% block content_header_new %}
@@ -36,6 +39,7 @@
                         <p style="color: #fff; font-weight: 600; font-size: 18px; cursor: pointer" data-toggle="modal" data-target="#headerVideoModal">{% trans "Watch video" %}</p>
                         {% if crowdfund.active and not end_date_passed %}
                         <button class="fund-btn" data-toggle="modal" data-target="#paymentFormModal">{% trans "FUND" %}</button>
+                        <button class="fund-btn" id="sharebtn">{% trans "SHARE" %}</button>
                         {% endif %}
                     </div>
                 </div>
@@ -188,6 +192,11 @@
         </div>
       </div>
     </div>
+    <div class="popovercontent">
+        <a class="btn btn-facebook btn-social-share" href="https://www.facebook.com/sharer/sharer.php?u=https://ekata.social{{ request.get_full_path }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a class="btn btn-google btn-social-share" href="https://plus.google.com/share?url=https://ekata.social{{ request.get_full_path }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-google-plus"></i></a>
+        <a class="btn btn-twitter btn-social-share" href="https://twitter.com/share?url=https://ekata.social{{ request.get_full_path }}"  onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank"><i class="fa fa-twitter"></i></a>
+    </div>
 {% endblock %}
 {% block extrascripts %}
     <script src="https://js.stripe.com/v3/"></script>
@@ -295,6 +304,15 @@
             height: '200px',
             size: '3px',
             alwaysVisible: false
+        });
+        $("#sharebtn").popover({
+            html : true,
+            content: function() {
+              return $(".popovercontent").html();
+            },
+            placement: "auto",
+            container: 'body',
+            trigger: 'focus'
         });
     </script>
     {% endcompress %}
