--- a/templates/crowdfunding/public_index.html
+++ b/templates/crowdfunding/public_index.html
@@ -27,6 +27,23 @@
         }
     </style>
 {% endblock %}
+{% block extrameta %}
+		{% if ogtag %}
+			<meta property="og:url" content="{{ request.build_absolute_uri }}" />
+			<meta property="og:title" content="{{ ogtag.title }}" />
+			<meta property="og:description" content="{{ ogtag.description }}" />
+			<meta property="og:type" content="{{ ogtag.page_type }}">
+			{% if ogtag.image %}
+				<meta property="og:image" content="http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ ogtag.image.url }}" />
+			{% else %}
+				<meta property="og:image" content="https://ekata.social/static/dist/img/ekata-logo-bk-200.png" />
+			{% endif %}
+			<meta property="fb:app_id" content="{{ ogtag.app_id }}">
+		{% for extrameta in ogtag.extrametatag_set.all %}
+			<meta property="{{ extrameta.meta_tag }}" content="{{ extrameta.description }}">
+		{% endfor %}
+		{% endif %}
+{% endblock %}
 {% block content %}
 <section class="content">
     <div class="row">
@@ -200,9 +217,9 @@
       </div>
     </div>
 	<div class="popovercontent">
-        <a class="btn btn-facebook btn-social-share" href="https://www.facebook.com/sharer/sharer.php?u=https://ekata.social{{ request.get_full_path }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a class="btn btn-google btn-social-share" href="https://plus.google.com/share?url=https://ekata.social{{ request.get_full_path }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-google-plus"></i></a>
-        <a class="btn btn-twitter btn-social-share" href="https://twitter.com/share?url=https://ekata.social{{ request.get_full_path }}"  onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a class="btn btn-facebook btn-social-share" href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a class="btn btn-google btn-social-share" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-google-plus"></i></a>
+        <a class="btn btn-twitter btn-social-share" href="https://twitter.com/share?url={{ request.build_absolute_uri }}"  onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank"><i class="fa fa-twitter"></i></a>
     </div>
 </section>
 {% endblock %}
